<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="24sp" android:textStyle="bold"
            android:id="@+id/end" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/foggybottom" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="16dp" android:textSize="24sp" android:textStyle="bold"
            android:id="@+id/start"/>
    <TextView
            android:text="@string/foggybottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/foggybottom" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/start" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"
            android:ems="10"
            android:id="@+id/stationname" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/start" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/enterstationname"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/end"/>
    <CheckBox
            android:text="@string/remember"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/remember" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/stationname" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/end"/>
    <Button
            android:text="@string/go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/go" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/stationname" android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/alert" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/go"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>